project2/test/test_2_3.out
Error type 6 at Line 4: left side in assignment is rvalue
Error type 6 at Line 5: left side in assignment is rvalue
Error type 12 at Line 9: indexing by non-integer