project2/test/test_2_3.spl
int foo()
{
  int a = 10;
  a + 1 = 2;
  3 = 2;

  float x1 = 0.5;
  float x3[10];
  x3[x1] = x1;
  return 0;
}
